# eigenmirror

./: .gitignore  README.md
src/: CMakeLists.txt  ComputeEigenfaces.cpp  DisplayImage.cpp  Stream.cpp  camera.cpp  create_csv.py  mean.cpp
